--- a/.kaholo/test.yml
+++ b/.kaholo/test.yml
@@ -1,4 +1,17 @@
-steps: []
+executionInputs: []
 triggers: []
-content: |+
-
+steps:
+  - params:
+      - name: path
+        value: ''
+        code: false
+    type: clone
+    id: clone1
+    displayName: Clone Git Repo
+    description: iee
+    timeout: null
+    agent: null
+    retries: null
+    nextStep: null
+kaholoVersion: 6.2.0
+firstStep: clone1
